--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@eslint/eslintrc": "^1.3.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/ms": "^0.7.31",
     "@types/node": "^17.0.42",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "discord.js": "^13.8.0",
     "eslint": "^8.17.0",
-    "ms": "^2.1.3"
+    "fs-extra": "^10.1.0",
+    "ms": "^2.1.3",
+    "node-fetch": "^3.2.6"
   },
   "type": "module",
   "devDependencies": {
